added comments, installed TailwindCSS, changed routes to include developer-profile

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       rel="stylesheet"
     />
 
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <title>Andy Kleindienst | Developer</title>
   </head>
   <body>
